MB-24817: Upon DCP stream creation, log end_seqno more accurately

When a DCP stream is created, not always the requested end seqno is
the actual end seqno of the stream. Hence while logging, log the
actual end seqno and requested seqno distinctly.

Change-Id: I72351b9175083ea6c17a060ffe8961cc64cdba7b
Reviewed-on: http://review.couchbase.org/79426
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>